/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -146,38 +146,44 @@ x, & 0 \leq x < 1 \\
 
 ## 3
 
-- Note $\abs{f(x)} \leq \norm{f}_\infty$ almost everywhere and taking $p$th powers preserves this inequality.
-- Thus
-\begin{align*}
-\norm{f}_p^p 
-&= \int_X \abs{f(x)}^p ~dx \leq \int_X \norm{f}_\infty^p ~dx  \\
-&= \norm{f}_\infty^p \cdot m(X) \\
-&= \norm{f}_\infty^p
-.\end{align*}
+- $\norm{f}_p \leq \norm{f}_\infty$:
+  - Note $\abs{f(x)} \leq \norm{f}_\infty$ almost everywhere and taking $p$th powers preserves this inequality.
+  - Thus
+  \begin{align*}
+  \norm{f}_p^p 
+  &= \int_X \abs{f(x)}^p ~dx \leq \int_X \norm{f}_\infty^p ~dx  \\
+  &= \norm{f}_\infty^p \cdot m(X) \\
+  &= \norm{f}_\infty^p
+  .\end{align*}
 
-  - Thus $\norm{f}_p \leq \norm{f}_\infty$ for all $p$ and taking $\lim_{p\to\infty}$ preserves this inequality.
+    - Thus $\norm{f}_p \leq \norm{f}_\infty$ for all $p$ and taking $\lim_{p\to\infty}$ preserves this inequality.
 
-- Conversely, let $\varepsilon > 0$.
+- $\norm{f}_p \geq \norm{f}_\infty$:
+  - Fix $\varepsilon > 0$.
 
-- Define 
-\begin{align*}
-S_\varepsilon \definedas \theset{x\in \RR \suchthat \abs{f(x)} \geq \norm{f}_\infty - \varepsilon}
-.\end{align*}
+  - Define 
+  \begin{align*}
+  S_\varepsilon \definedas \theset{x\in \RR \suchthat \abs{f(x)} \geq \norm{f}_\infty - \varepsilon}
+  .\end{align*}
 
 
-- Then
-\begin{align*}
-\norm{f}_p^p 
-&= \int_X \abs{f(x)}^p ~dx \\
-&\geq \int_{S_\varepsilon} \abs{f(x)}^p ~dx \quad\text{since } S_\eps \subseteq X \\
-&\geq \int_{S_\varepsilon} \abs{\norm{f}_\infty - \varepsilon}^p ~dx \quad\text{since on } S_\eps, \abs{f} \geq \norm{f}_\infty - \eps \\
-&= \abs{\norm{f}_\infty - \varepsilon}^p \cdot m(S_\varepsilon) \quad\text{since the integrand is a constant} \\
-\implies \norm{f}_p &\geq \abs{\norm{f}_\infty - \varepsilon} \cdot m(S_\varepsilon)^{\frac 1 p} \\
-&\converges{p\to\infty}\to \abs{\norm{f}_\infty - \varepsilon} \\ 
-&\converges{\varepsilon \to 0}\to \norm{f}_\infty
-.\end{align*}
+  - Then
+  \begin{align*}
+  \norm{f}_p^p 
+  &= \int_X \abs{f(x)}^p ~dx \\
+  &\geq \int_{S_\varepsilon} \abs{f(x)}^p ~dx \quad\text{since } S_\eps \subseteq X \\
+  &\geq \int_{S_\varepsilon} \abs{\norm{f}_\infty - \varepsilon}^p ~dx \quad\text{since on } S_\eps, \abs{f} \geq \norm{f}_\infty - \eps \\
+  &= \abs{\norm{f}_\infty - \varepsilon}^p \cdot m(S_\varepsilon) \quad\text{since the integrand is a constant} \\
+  \end{align*}
+  
+  - Thus
+  \begin{align*}
+  \implies \norm{f}_p &\geq \abs{\norm{f}_\infty - \varepsilon} \cdot m(S_\varepsilon)^{\frac 1 p} \\
+  &\converges{p\to\infty}\to \abs{\norm{f}_\infty - \varepsilon} \\ 
+  &\converges{\varepsilon \to 0}\to \norm{f}_\infty
+  .\end{align*}
 
-So $\norm{f}_p \geq \norm{f}_\infty$.
+  - So $\norm{f}_p \geq \norm{f}_\infty$.
 
 $\qed$
 
