/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -176,7 +176,7 @@ x, & 0 \leq x < 1 \\
   &= \abs{\norm{f}_\infty - \varepsilon}^p \cdot m(S_\varepsilon) \quad\text{since the integrand is a constant} \\
   \end{align*}
   
-  - Thus
+  - Taking $p$th roots, 
   \begin{align*}
   \implies \norm{f}_p &\geq \abs{\norm{f}_\infty - \varepsilon} \cdot m(S_\varepsilon)^{\frac 1 p} \\
   &\converges{p\to\infty}\to \abs{\norm{f}_\infty - \varepsilon} \\ 
