/ ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -189,13 +189,14 @@ $\qed$
 
 ## 4
 
-Fix $k \in \ZZ$.
-Since $e^{2\pi i k x}$ is continuous on the compact interval $[0, 1]$, it is uniformly continuous, and is thus there is a sequence of polynomials $P_\ell$ such that 
+- Fix $k \in \ZZ$.
+- Since $e^{2\pi i k x}$ is continuous on the compact interval $[0, 1]$, it is uniformly continuous.
+- Thus there is a sequence of polynomials $P_\ell$ such that 
 $$
 P_{\ell, k} \converges{\ell\to\infty}\to e^{2\pi i k x} \text{ uniformly on } [0,1]
 .$$
 
-Note that by linearity,
+- Note that by linearity,
 $$
 \int f(x) x^n = 0 ~\forall n \implies \int f(x) P_{\ell, k}(x) = 0
 \quad \forall \ell \in \NN
