/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -189,6 +189,12 @@ $\qed$
 
 ## 4
 
+Concepts used:
+
+- $\hat f \equiv 0 \iff f = 0$ almost everywhere.
+
+**Solution**:
+
 - Fix $k \in \ZZ$.
 - Since $e^{2\pi i k x}$ is continuous on the compact interval $[0, 1]$, it is uniformly continuous.
 - Thus there is a sequence of polynomials $P_\ell$ such that 
@@ -202,8 +208,7 @@ $$
 \quad \forall \ell \in \NN
 $$
 
-
-But then the $k$th Fourier coefficient of $f$ is given by
+- But then the $k$th Fourier coefficient of $f$ is given by
 \begin{align*}
 \inner{f}{e_k} 
 &= \int_0^1 f(x) e^{-2\pi i k x} ~dx \\
@@ -211,9 +216,9 @@ But then the $k$th Fourier coefficient of $f$ is given by
 &= \lim_{\ell \to \infty}  \int_0^1 f(x) P_\ell(x) \quad\quad \text{by uniform convergence} \\
 &= \lim_{\ell \to \infty} 0 \\
 &= 0 \quad \forall k\in \ZZ
-,\end{align*}
+.\end{align*}
 
-so $\hat f$ is the zero function, and $\hat f = 0 \iff f = 0$ almost everywhere.
+- Thus $\hat f$ is the zero function, and $\hat f = 0 \iff f = 0$ almost everywhere.
 
 $\qed$
 
