/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -192,6 +192,7 @@ $\qed$
 Concepts used:
 
 - $\hat f \equiv 0 \iff f = 0$ almost everywhere.
+- Weierstrass Approximation: A uniformly continuous function on a compact set can be uniformly approximated by polynomials.
 
 **Solution**:
 
@@ -202,11 +203,12 @@ $$
 P_{\ell, k} \converges{\ell\to\infty}\to e^{2\pi i k x} \text{ uniformly on } [0,1]
 .$$
 
-- Note that by linearity,
+- Note applying linearity to the assumption $\int f(x) \, x^n$, we have
 $$
-\int f(x) x^n = 0 ~\forall n \implies \int f(x) P_{\ell, k}(x) = 0
+\int f(x) x^n \,dx = 0 ~\forall n \implies \int f(x) p(x) \,dx = 0 
 \quad \forall \ell \in \NN
 $$
+  for any polynomial $p(x)$, and in particular $P_{\ell, k}(x)$ for every $\ell$.
 
 - But then the $k$th Fourier coefficient of $f$ is given by
 \begin{align*}
@@ -218,21 +220,30 @@ $$
 &= 0 \quad \forall k\in \ZZ
 .\end{align*}
 
+- So every Fourier coefficient is zero.
+
 - Thus $\hat f$ is the zero function, and $\hat f = 0 \iff f = 0$ almost everywhere.
 
 $\qed$
 
 ## 5
 
-> Moral: $\int \abs{f_n - f} \to \iff \int f_n = \int f$.
+Concepts used:
 
-Since if $\int \abs{f_n} \to \int \abs{f}$ then we can define
+- $\int \abs{f_n - f} \to \iff \int f_n = \int f$.
+- Fatou
+
+**Solution**:
+
+- Since $\int \abs{f_n} \converges{n\to\infty}\to \int \abs{f}$, define
 \begin{align*}
-h_n &= \abs{f_n - f} &&\to 0 ~a.e.\\
-g_n &= \abs{f_n} + \abs{f} &&\to 2\abs {f} ~a.e.
+h_n &= \abs{f_n - f} \converges{n\to\infty}\to 0 ~a.e.\\
+g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
 \end{align*}
 
+  - Note that $g_n - h_n \converges{n\to\infty}\to 2\abs{f} - 0 = 2\abs{f}$.
 
+- Then
 \begin{align*}
 \int 2 \abs {f} 
 &= \int \liminf~ (g_n - h_n) \\
@@ -240,16 +251,14 @@ g_n &= \abs{f_n} + \abs{f} &&\to 2\abs {f} ~a.e.
 &= \int 2 \abs{f} - \int \liminf~ h_n \\
 &\overset{Fatou}\leq \int 2\abs{f} + \limsup \int h_n
 ,\end{align*}
+  which forces $\int h_n = \int \abs{f_n - f} \to 0$.
 
-which forces $\int h_n = \int \abs{f_n - f} \to 0$.
-
-But then 
+- But then 
 \begin{align*}
 \abs{\int f_n - \int f}
 = \abs{\int f_n -f} 
-\leq \int \abs{f_n - f} \to 0
+\leq \int \abs{f_n - f} \converges{n\to\infty}\to 0
 ,\end{align*}
-
-so $\int f_n \to \int f$.
+  so $\int f_n \to \int f$.
 
 $\qed$
