/ ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -30,7 +30,7 @@ E_j \definedas \theset{x\in [0, 1] \suchthat \
 
 - Importantly, note that 
   \begin{align*}
-  \limsup_{j\to\infty} E_j = E
+\limsup_{j\to\infty} E_j \definedas \intersect_{n=1}^\infty \union_{j=n}^\infty E_j = E
   \end{align*}
   
   since 
