/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -75,8 +75,18 @@ B_{j^{-3}}\qty{j-1\over j}
 \sum_{j\in \NN} m(E_j) =  2\sum_{j\in \NN} \frac 1 {j^2} < \infty
 ,\end{align*}
   which converges by the $p\dash$test for sums.
+  
+- But then
+\begin{align*}
+m(E) 
+&= m(\limsup_j E_j) \\
+&= m(\intersect_{n\in \NN} \union_{j\geq n} E_j) \\
+&\leq m(\union_{j\geq N} E_j) \quad\text{for every } N \\
+&\leq \sum_{j\geq N} m(E_j) \\
+&\converges{N\to\infty}\to 0 \quad\text{}
+.\end{align*}
 
-- Since $\theset{E_j}$ is a countable collection of measurable sets such that $\sum m(E_j) < \infty$, Borel-Cantelli applies and $m(\limsup_j E_j) = 0$ (and $E = \limsup_j E_j$).
+- Thus $E$ is measurable as a subset of a null set and $m(E) = 0$.
 
 $\qed$
 
