--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -116,7 +116,7 @@ x, & 0 \leq x < 1 \\
 .\end{align*}
 
 - If $f_n \to f$ uniformly on $[0, \infty)$, it would converge uniformly on every subset and thus uniformly on $(0, 1)$.
-- Then $f$ would be a uniform limit of continuous functions and thus continuous, 
+- Then $f$ would be a uniform limit of continuous functions and thus continuous.
 - By uniqueness of limits, $f_n$ would converge to the pointwise limit above, which is not continuous at $x=1$.
 
 ### b
