--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -115,7 +115,7 @@ x, & 0 \leq x < 1 \\
 \end{cases}
 .\end{align*}
 
-- If $f_n \to f$ uniformly on $[0, \infty)$, it would converge uniformly on every subset and thus uniformly on $(0, 1)$.
+- If $f_n \to f$ uniformly on $[0, \infty)$, it would converge uniformly on every subset and thus uniformly on $(0, \infty)$.
 - Then $f$ would be a uniform limit of continuous functions and thus continuous.
 - By uniqueness of limits, $f_n$ would converge to the pointwise limit above, which is not continuous at $x=1$.
 
