/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -117,14 +117,14 @@ x, & 0 \leq x < 1 \\
 
 - If $f_n \to f$ uniformly on $[0, \infty)$, it would converge uniformly on every subset and thus uniformly on $(0, \infty)$.
   - Then $f$ would be a uniform limit of continuous functions on $(0, \infty)$ and thus continuous on $(0, \infty)$.
-  - By uniqueness of limits, $f_n$ would converge to the pointwise limit above, which is not continuous at $x=1$, a contradiction.
+  - By uniqueness of limits, $f_n$ would converge to the pointwise limit $f$ above, which is not continuous at $x=1$, a contradiction.
 
 ### b
 
 - If the DCT applies, interchange the limit and integral:
     \begin{align*}
     \lim_{n\to\infty }\int_0^\infty f_n(x)\, dx 
-    &= \int_0^\infty \lim_{n\to\infty}f_n(x) \, dx \\
+&= \int_0^\infty \lim_{n\to\infty}f_n(x) \, dx \quad\text{DCT}\\
     &=\int_0^\infty f(x) \,dx \\
     &= \int_0^1 x \,dx + \int_1^\infty 0\, dx \\
     &= {1\over 2}x^2 \evalfrom_0^1 \\
