/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -137,7 +137,7 @@ x, & 0 \leq x < 1 \\
 = \int_0^1 f_n(x) + \int_1^\infty f_n(x)
 .\end{align*}
 
-- $f_n$ is uniformly bounded by $g(x) = 1$ in the first integral, since
+- $f_n$ restricted to $(0, 1)$ is uniformly bounded by $g_0(x) = 1$ in the first integral, since
   \begin{align*}
   x \in [0, 1] \implies \frac{x}{1+x^n} < \frac{1}{1+x^n} < 1 \definedas g(x)
   \end{align*}
@@ -145,8 +145,9 @@ x, & 0 \leq x < 1 \\
   \begin{align*}
   \int_0^1 f_n(x)\,dx \leq \int_0^1 1 \,dx = 1 < \infty
   .\end{align*}
+  Also note that $g_0\cdot \chi_{(0, 1)} \in L^1((0, \infty))$.
 
-- $f_n$ is uniformly bounded by $g(x) = {1\over x^{n-1}}$ on $[1, \infty)$, since
+- The $f_n$ restricted to $(1, \infty)$ are uniformly bounded by $g_1(x) = {1\over x^{n-1}}$ on $[1, \infty)$, since
   \begin{align*}
   x \in (1, \infty) \implies \frac{x}{1+x^n} \approx O\left(\frac 1 {x^{n-1}}\right)
   ,\end{align*}
