/ ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -149,7 +149,7 @@ x, & 0 \leq x < 1 \\
 
 - The $f_n$ restricted to $(1, \infty)$ are uniformly bounded by $g_1(x) = {1\over x^{n-1}}$ on $[1, \infty)$, since
   \begin{align*}
-  x \in (1, \infty) \implies \frac{x}{1+x^n} \approx O\left(\frac 1 {x^{n-1}}\right)
+  x \in (1, \infty) \implies \frac{x}{1+x^n} \leq {x \over x^n} = x^{-(n-1)}$ 
   ,\end{align*}
 
   - Since for $n > 2$, $\int_1^\infty {1\over x^n} < \infty$ by the $p\dash$test, $g(x) \in L^1$ ??
