--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -147,9 +147,9 @@ x, & 0 \leq x < 1 \\
   .\end{align*}
   Also note that $g_0\cdot \chi_{(0, 1)} \in L^1((0, \infty))$.
 
-- The $f_n$ restricted to $(1, \infty)$ are uniformly bounded by $g_1(x) = {1\over x^{n-1}}$ on $[1, \infty)$, since
+- The $f_n$ restricted to $(1, \infty)$ are uniformly bounded by $g_1(x) = {1\over x^{2}}$ on $[1, \infty)$, since
   \begin{align*}
-x \in (1, \infty) \implies \frac{x}{1+x^n} \leq {x \over x^n} = {1 \over x^{n-1}}
+  x \in (1, \infty) \implies \frac{x}{1+x^n} \leq {x \over x^n} = {1 \over x^{n-1}} \leq {1\over x^2}\text{ when } n\geq 3
   ,\end{align*}
 
   - Since for $n > 2$, $\int_1^\infty {1\over x^n} < \infty$ by the $p\dash$test, $g(x) \in L^1$ ??
