/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ + ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -153,7 +153,7 @@ x, & 0 \leq x < 1 \\
   ,\end{align*}
   by the $p\dash$test for integrals.
 
-- So set \[g(x) \definedas g_0(x) \cdot \chi_{(0, 1)} + g_1(x) \cdot \chi_{[1, \infty)}\]; by the above arguments, $g \in L^1((0, \infty))$ and $f_n \leq g$ everywhere, so the DCT applies.
+- So set $$g(x) \definedas g_0 \cdot \chi_{(0, 1)} + g_1 \cdot \chi_{[1, \infty)}$$; by the above arguments, $g \in L^1((0, \infty))$ and $f_n \leq g$ everywhere, so the DCT applies.
 
 ## 3
 
