/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -164,7 +164,7 @@ x, & 0 \leq x < 1 \\
   \norm{f}_p^p 
   &= \int_X \abs{f(x)}^p ~dx \leq \int_X \norm{f}_\infty^p ~dx  \\
   &= \norm{f}_\infty^p \cdot m(X) \\
-  &= \norm{f}_\infty^p
+  &= \norm{f}_\infty^p \quad \text{since } m(X) = 1
   .\end{align*}
 
     - Thus $\norm{f}_p \leq \norm{f}_\infty$ for all $p$ and taking $\lim_{p\to\infty}$ preserves this inequality.
