/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -157,6 +157,10 @@ x, & 0 \leq x < 1 \\
 
 ## 3
 
+Concepts used:
+
+- $\norm{f}_\infty \definedas \inf_t m\qty{\theset{ t\suchthat m\qty{\theset{x\in \RR^n \suchthat f(x) > t}} = 0 } }$.
+
 - $\norm{f}_p \leq \norm{f}_\infty$:
   - Note $\abs{f(x)} \leq \norm{f}_\infty$ almost everywhere and taking $p$th powers preserves this inequality.
   - Thus
