--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -167,6 +167,9 @@ Concepts used:
   - Note $\abs{f(x)} \leq \norm{f}_\infty$ almost everywhere and taking $p$th powers preserves this inequality.
   - Thus
   \begin{align*}
+  \abs{f(x)} \leq \norm{f}_\infty \quad\text{a.e. by definition} \\
+  \implies 
+  \abs{f(x)}^p \leq \norm{f}_\infty^p \quad\text{for } p\geq 1 \\  
   \norm{f}_p^p 
   &= \int_X \abs{f(x)}^p ~dx \leq \int_X \norm{f}_\infty^p ~dx  \\
   &= \norm{f}_\infty^p \cdot m(X) \\
