/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ - ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -172,7 +172,8 @@ Concepts used:
   \abs{f(x)}^p &\leq \norm{f}_\infty^p \quad\text{for } p\geq 0 \\  
   \implies
   \norm{f}_p^p 
-  &= \int_X \abs{f(x)}^p ~dx \leq \int_X \norm{f}_\infty^p ~dx  \\
+  &= \int_X \abs{f(x)}^p ~dx \\
+  &\leq \int_X \norm{f}_\infty^p ~dx  \\
   &= \norm{f}_\infty^p \cdot m(X) \\
   &= \norm{f}_\infty^p \quad \text{since } m(X) = 1
   .\end{align*}
