--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -174,6 +174,7 @@ Concepts used:
   \norm{f}_p^p 
   &= \int_X \abs{f(x)}^p ~dx \\
   &\leq \int_X \norm{f}_\infty^p ~dx  \\
+  &= \norm{f}_\infty^p \int_X 1\,dx \\ 
   &= \norm{f}_\infty^p \cdot m(X) \\
   &= \norm{f}_\infty^p \quad \text{since } m(X) = 1
   .\end{align*}
