/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -186,8 +186,12 @@ Concepts used:
 
   - Define 
   \begin{align*}
-  S_\varepsilon \definedas \theset{x\in \RR \suchthat \abs{f(x)} \geq \norm{f}_\infty - \varepsilon}
+  S_\varepsilon \definedas \theset{x\in \RR^n \suchthat \abs{f(x)} \geq \norm{f}_\infty - \varepsilon}
   .\end{align*}
+
+    - Note that $m(S_\eps) > 0$; otherwise if $m(S_\eps) = 0$, then $t\definedas \norm{f}_\infty - \eps < \norm{f}_\eps$.
+    But this produces a *smaller* upper bound almost everywhere than $\norm{f}_\eps$, contradicting the definition of $\norm{f}_\eps$ as an infimum over such bounds.
+    
 
 
   - Then
@@ -196,17 +200,18 @@ Concepts used:
   &= \int_X \abs{f(x)}^p ~dx \\
   &\geq \int_{S_\varepsilon} \abs{f(x)}^p ~dx \quad\text{since } S_\eps \subseteq X \\
   &\geq \int_{S_\varepsilon} \abs{\norm{f}_\infty - \varepsilon}^p ~dx \quad\text{since on } S_\eps, \abs{f} \geq \norm{f}_\infty - \eps \\
-  &= \abs{\norm{f}_\infty - \varepsilon}^p \cdot m(S_\varepsilon) \quad\text{since the integrand is a constant} \\
+  &= \abs{\norm{f}_\infty - \varepsilon}^p \cdot m(S_\varepsilon) \quad\text{since the integrand is independent of }x \\
+  & \geq 0 \quad\text{since } m(S_\eps) > 0
   \end{align*}
   
-  - Taking $p$th roots, 
+  - Taking $p$th roots for $p\geq 1$ preserves the inequality, so
   \begin{align*}
-  \implies \norm{f}_p &\geq \abs{\norm{f}_\infty - \varepsilon} \cdot m(S_\varepsilon)^{\frac 1 p} \\
-  &\converges{p\to\infty}\to \abs{\norm{f}_\infty - \varepsilon} \\ 
-  &\converges{\varepsilon \to 0}\to \norm{f}_\infty
+  \implies \norm{f}_p &\geq \abs{\norm{f}_\infty - \varepsilon} \cdot m(S_\varepsilon)^{\frac 1 p} 
+  \converges{p\to\infty}\to \abs{\norm{f}_\infty - \varepsilon} 
+  \converges{\varepsilon \to 0}\to \norm{f}_\infty
   .\end{align*}
 
-  - So $\norm{f}_p \geq \norm{f}_\infty$.
+  - Thus $\norm{f}_p \geq \norm{f}_\infty$.
 
 $\qed$
 
