/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -209,7 +209,8 @@ Concepts used:
   \implies \norm{f}_p &\geq \abs{\norm{f}_\infty - \varepsilon} \cdot m(S_\varepsilon)^{\frac 1 p} 
   \converges{p\to\infty}\to \abs{\norm{f}_\infty - \varepsilon} 
   \converges{\varepsilon \to 0}\to \norm{f}_\infty
-  .\end{align*}
+  \end{align*}
+  where we've used the fact that above arguments work 
 
   - Thus $\norm{f}_p \geq \norm{f}_\infty$.
 
@@ -219,10 +220,13 @@ $\qed$
 
 Concepts used:
 
+
+### Proof 1: Using Fourier Transforms
+
 - $\hat f \equiv 0 \iff f = 0$ almost everywhere.
+- $\hat f \equiv 0$ iff $\inner{f, e_k} \definedas \int_X f(x) e_k(x) \,dx =0$ for every $k$, where $e_k$ is any basis for $L^2([0, 1])$ (such as $e_k \definedas \exp(2\pi i k)$).
 - Weierstrass Approximation: A uniformly continuous function on a compact set can be uniformly approximated by polynomials.
 
-**Solution**:
 
 - Fix $k \in \ZZ$.
 - Since $e^{2\pi i k x}$ is continuous on the compact interval $[0, 1]$, it is uniformly continuous.
