--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -227,6 +227,7 @@ Concepts used:
 - $\hat f \equiv 0$ iff $\inner{f, e_k} \definedas \int_X f(x) e_k(x) \,dx =0$ for every $k$, where $e_k$ is any basis for $L^2([0, 1])$ (such as $e_k \definedas \exp(2\pi i k)$).
 - Weierstrass Approximation: A uniformly continuous function on a compact set can be uniformly approximated by polynomials.
 
+**Solution**:
 
 - Fix $k \in \ZZ$.
 - Since $e^{2\pi i k x}$ is continuous on the compact interval $[0, 1]$, it is uniformly continuous.
