/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ - ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -218,13 +218,14 @@ $\qed$
 
 ## 4
 
-Concepts used:
 
 
 ### Proof 1: Using Fourier Transforms
 
+Concepts used:
+
 - $\hat f \equiv 0 \iff f = 0$ almost everywhere.
-- $\hat f \equiv 0$ iff $\inner{f, e_k} \definedas \int_X f(x) e_k(x) \,dx =0$ for every $k$, where $e_k$ is any basis for $L^2([0, 1])$ (such as $e_k \definedas \exp(2\pi i k)$).
+- $\hat f \equiv 0$ iff $\inner{f}{e_k} \definedas \int_X f(x) e_k(x) \,dx =0$ for every $k$, where $e_k$ is any basis for $L^2([0, 1])$ (such as $e_k \definedas \exp{2\pi i k}$).
 - Weierstrass Approximation: A uniformly continuous function on a compact set can be uniformly approximated by polynomials.
 
 **Solution**:
@@ -241,19 +242,18 @@ $$
 \int f(x) x^n \,dx = 0 ~\forall n \implies \int f(x) p(x) \,dx = 0 
 \quad \forall \ell \in \NN
 $$
-  for any polynomial $p(x)$, and in particular $P_{\ell, k}(x)$ for every $\ell$.
+  for any polynomial $p(x)$, and in particular for $P_{\ell, k}(x)$ for every $\ell$ and every $k$.
 
-- But then the $k$th Fourier coefficient of $f$ is given by
+- But then the $k$th Fourier coefficient $a_k$ of $f$ is given by
 \begin{align*}
-\inner{f}{e_k} 
+a_k \definedas \hat f(k) \definedas \inner{f}{e_k} 
 &= \int_0^1 f(x) e^{-2\pi i k x} ~dx \\
 &= \int_0^1 f(x) \lim_{\ell \to \infty} P_\ell(x) \\
 &= \lim_{\ell \to \infty}  \int_0^1 f(x) P_\ell(x) \quad\quad \text{by uniform convergence} \\
 &= \lim_{\ell \to \infty} 0 \\
 &= 0 \quad \forall k\in \ZZ
-.\end{align*}
-
-- So every Fourier coefficient is zero.
+,\end{align*}
+  so every Fourier coefficient is zero.
 
 - Thus $\hat f$ is the zero function, and $\hat f = 0 \iff f = 0$ almost everywhere.
 
