/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -224,8 +224,6 @@ $\qed$
 
 Concepts used:
 
-- $\hat f \equiv 0 \iff f = 0$ almost everywhere.
-- $\hat f \equiv 0$ iff $\inner{f}{e_k} \definedas \int_X f(x) e_k(x) \,dx =0$ for every $k$, where $e_k$ is any basis for $L^2([0, 1])$ (such as $e_k \definedas \exp{2\pi i k}$).
 - Weierstrass Approximation: A uniformly continuous function on a compact set can be uniformly approximated by polynomials.
 
 **Solution**:
@@ -240,22 +238,23 @@ P_{\ell, k} \converges{\ell\to\infty}\to e^{2\pi i k x} \text{ uniformly on } [0
 - Note applying linearity to the assumption $\int f(x) \, x^n$, we have
 $$
 \int f(x) x^n \,dx = 0 ~\forall n \implies \int f(x) p(x) \,dx = 0 
-\quad \forall \ell \in \NN
 $$
   for any polynomial $p(x)$, and in particular for $P_{\ell, k}(x)$ for every $\ell$ and every $k$.
 
-- But then the $k$th Fourier coefficient $a_k$ of $f$ is given by
+- But then  
 \begin{align*}
-a_k \definedas \hat f(k) \definedas \inner{f}{e_k} 
+\inner{f}{e_k} 
 &= \int_0^1 f(x) e^{-2\pi i k x} ~dx \\
 &= \int_0^1 f(x) \lim_{\ell \to \infty} P_\ell(x) \\
 &= \lim_{\ell \to \infty}  \int_0^1 f(x) P_\ell(x) \quad\quad \text{by uniform convergence} \\
-&= \lim_{\ell \to \infty} 0 \\
+&= \lim_{\ell \to \infty} 0 \quad\text{by assumption}\\
 &= 0 \quad \forall k\in \ZZ
 ,\end{align*}
-  so every Fourier coefficient is zero.
+ so $f$ is orthogonal to every $e_k$. 
 
-- Thus $\hat f$ is the zero function, and $\hat f = 0 \iff f = 0$ almost everywhere.
+- Thus $f\in S^\perp \definedas \spanof_\CC\theset{e_k}_{k\in \ZZ}^\perp \subseteq L^2([0, 1])$, but since this is a basis, $S$ is dense and thus $S^\perp = \theset{0}$ in $L^2([0, 1])$.
+
+- Thus $f\equiv 0$ in $L^2([0, 1])$, which implies that $f$ is zero almost everywhere.
 
 $\qed$
 
