/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -282,11 +282,19 @@ g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
 - Then
 \begin{align*}
 \int 2 \abs {f} 
-&= \int \liminf~ (g_n - h_n) \\
-&= \int \liminf~ g_n - \int \liminf~ h_n \\
-&= \int 2 \abs{f} - \int \liminf~ h_n \\
-&\overset{Fatou}\leq \int 2\abs{f} + \limsup \int h_n
+&= \int \liminf_n (g_n - h_n) \\
+&= \int \liminf_n(g_n) + \int \liminf_n(-h_n) \\
+&= \int \liminf_n(g_n) - \int \limsup_n(h_n) \\
+&= \int 2 \abs{f} - \int \limsup_n(h_n) \\
+&\leq \int 2\abs{f} - \limsup_n \int h_n \quad\text{by Fatou}
 ,\end{align*}
+
+- Since $f\in L^1$, $\int 2\abs{f} < \infty$ and it makes sense to subtract it from both sides, thus
+\begin{align*}
+0 &\leq \limsup_n \int h_n \\
+&\definedas \limsup_n \int \abs{f_n - f} \\
+&\converges{n\to\infty} \
+.\end{align*}
   which forces $\int h_n = \int \abs{f_n - f} \to 0$.
 
 - But then 
