/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -291,17 +291,22 @@ g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
 
 - Since $f\in L^1$, $\int 2\abs{f} < \infty$ and it makes sense to subtract it from both sides, thus
 \begin{align*}
-0 &\leq \limsup_n \int h_n \\
-&\definedas \limsup_n \int \abs{f_n - f} \\
-&\converges{n\to\infty} \
+0 &\leq - \limsup_n \int h_n \\
+&\definedas - \limsup_n \int \abs{f_n - f}
 .\end{align*}
-  which forces $\int h_n = \int \abs{f_n - f} \to 0$.
+  which forces $\limsup_n \int \abs{f_n -f}  = 0$, since
+    
+    - The integral of a positive function is positive, so $\int \abs{f_n - f} \geq 0$.
+    - So $-\int \abs{f_n - f} \leq 0$.
+    - But the above inequality shows $-\int \abs{f_n - f} \geq 0$ as well.
 
 - But then 
 \begin{align*}
 \abs{\int f_n - \int f}
-= \abs{\int f_n -f} 
-\leq \int \abs{f_n - f} \converges{n\to\infty}\to 0
+&= \abs{\int f_n -f}  \\
+&\leq \int \abs{f_n - f} \\ 
+&\leq \limsup \int \abs{f_n - f} \\
+& = 0
 ,\end{align*}
   so $\int f_n \to \int f$.
 
