/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -304,10 +304,12 @@ g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
 \begin{align*}
 \abs{\int f_n - \int f}
 &= \abs{\int f_n -f}  \\
-&\leq \int \abs{f_n - f} \\ 
-&\leq \limsup \int \abs{f_n - f} \\
-& = 0
+&\leq \int \abs{f_n - f}
 ,\end{align*}
-  so $\int f_n \to \int f$.
+  and taking $\limsup_n$ on both sides yields
+  \begin{align*}
+  \limsup_n \abs{\int f_n - \int f} \leq \limsup_n \int \abs{f_n - f} = 0
+  ,\end{align*}
+  so $\int f_n \converges{n\to\infty}\to \int f$.
 
 $\qed$
