+ ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -303,8 +303,8 @@ g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
 - But then 
 \begin{align*}
 \abs{\int f_n - \int f}
-&= \abs{\int f_n -f}  \\
-&\leq \int \abs{f_n - f}
+&= \abs{\int f_n -f}
+\leq \int \abs{f_n - f}
 ,\end{align*}
   and taking $\limsup_n$ on both sides yields
   \begin{align*}
