--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -267,7 +267,11 @@ $\qed$
 Concepts used:
 
 - $\int \abs{f_n - f} \to \iff \int f_n = \int f$.
-- Fatou
+- Fatou:
+\begin{align*}
+\int \liminf f_n \leq \liminf \int f_n \\
+\int \limsup f_n \geq \limsup \int f_n
+.\end{align*}
 
 **Solution**:
 
@@ -289,7 +293,7 @@ g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
 &\leq \int 2\abs{f} - \limsup_n \int h_n \quad\text{by Fatou}
 ,\end{align*}
 
-- Since $f\in L^1$, $\int 2\abs{f} < \infty$ and it makes sense to subtract it from both sides, thus
+- Since $f\in L^1$, $\int 2\abs{f}  = 2\norm{f}_1 < \infty$ and it makes sense to subtract it from both sides, thus
 \begin{align*}
 0 &\leq - \limsup_n \int h_n \\
 &\definedas - \limsup_n \int \abs{f_n - f}
@@ -299,6 +303,7 @@ g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
     - The integral of a positive function is positive, so $\int \abs{f_n - f} \geq 0$.
     - So $-\int \abs{f_n - f} \leq 0$.
     - But the above inequality shows $-\int \abs{f_n - f} \geq 0$ as well.
+- Since $\liminf_n \int h_n \leq \limsup_n \int h_n = 0$, $\lim_n \int h_n$ exists and is equal to zero.
 
 - But then 
 \begin{align*}
@@ -306,10 +311,10 @@ g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
 &= \abs{\int f_n -f}
 \leq \int \abs{f_n - f}
 ,\end{align*}
-  and taking $\limsup_n$ on both sides yields
+  and taking $\lim_{n\to\infty}$ on both sides yields
   \begin{align*}
   \limsup_n \abs{\int f_n - \int f} \leq \limsup_n \int \abs{f_n - f} = 0
   ,\end{align*}
-  so $\int f_n \converges{n\to\infty}\to \int f$.
+  so $\lim_{n\to\infty} \int f_n = \int f$.
 
 $\qed$
