/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -277,8 +277,8 @@ Concepts used:
 
 - Since $\int \abs{f_n} \converges{n\to\infty}\to \int \abs{f}$, define
 \begin{align*}
-h_n &= \abs{f_n - f} \converges{n\to\infty}\to 0 ~a.e.\\
-g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
+h_n &= \abs{f_n - f} &\converges{n\to\infty}\to 0 ~a.e.\\
+g_n &= \abs{f_n} + \abs{f} &\converges{n\to\infty}\to 2\abs {f} ~a.e.
 \end{align*}
 
   - Note that $g_n - h_n \converges{n\to\infty}\to 2\abs{f} - 0 = 2\abs{f}$.
@@ -300,9 +300,9 @@ g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
 .\end{align*}
   which forces $\limsup_n \int \abs{f_n -f}  = 0$, since
     
-    - The integral of a positive function is positive, so $\int \abs{f_n - f} \geq 0$.
-    - So $-\int \abs{f_n - f} \leq 0$.
-    - But the above inequality shows $-\int \abs{f_n - f} \geq 0$ as well.
+    - The integral of a nonnegative function is nonnegative, so $\int \abs{f_n - f} \geq 0$.
+    - So $\qty{ -\int \abs{f_n - f} } \leq 0$.
+    - But the above inequality shows $\qty{ -\int \abs{f_n - f} } \geq 0$ as well.
 - Since $\liminf_n \int h_n \leq \limsup_n \int h_n = 0$, $\lim_n \int h_n$ exists and is equal to zero.
 
 - But then 
@@ -313,7 +313,7 @@ g_n &= \abs{f_n} + \abs{f} \converges{n\to\infty}\to 2\abs {f} ~a.e.
 ,\end{align*}
   and taking $\lim_{n\to\infty}$ on both sides yields
   \begin{align*}
-  \limsup_n \abs{\int f_n - \int f} \leq \limsup_n \int \abs{f_n - f} = 0
+  \lim_{n\to\infty} \abs{\int f_n - \int f} \leq \lim_{n\to\infty} \int \abs{f_n - f} = 0
   ,\end{align*}
   so $\lim_{n\to\infty} \int f_n = \int f$.
 
