--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -264,6 +264,7 @@ Concepts used
 
 - $C^1([0, 1])$ is dense in $L^2([0, 1])$
 - Polynomials are dense in $L^p(X, \mathcal{M}, \mu)$ for any $X\subseteq \RR^n$ compact and $\mu$ a finite measure, for all $1\leq p < \infty$.
+  - Use Weierstrass Approximation, then uniform convergence implies $L^p(\mu)$ convergence by DCT.
 
 \todo{Todo}
 
