/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -266,7 +266,15 @@ Concepts used
 - Polynomials are dense in $L^p(X, \mathcal{M}, \mu)$ for any $X\subseteq \RR^n$ compact and $\mu$ a finite measure, for all $1\leq p < \infty$.
   - Use Weierstrass Approximation, then uniform convergence implies $L^p(\mu)$ convergence by DCT.
 
-\todo{Todo}
+**Solution**:
+
+- By density of polynomials, for $f\in L^2([0, 1])$ choose $p_\eps(x)$ such that $\norm{f - p_\eps} < \eps$ by Weierstrass approximation.
+- Then on one hand,
+\begin{align*}
+\norm{f(f-p_\eps)}_1 = \norm{f^2}_1 - \norm{f\cdot p_\eps}_1 = \norm{f}_2^2 - 0 \quad\text{by assumption}
+.\end{align*}
+
+- On the other hand
 
 ## 5
 
