/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -271,10 +271,19 @@ Concepts used
 - By density of polynomials, for $f\in L^2([0, 1])$ choose $p_\eps(x)$ such that $\norm{f - p_\eps} < \eps$ by Weierstrass approximation.
 - Then on one hand,
 \begin{align*}
-\norm{f(f-p_\eps)}_1 = \norm{f^2}_1 - \norm{f\cdot p_\eps}_1 = \norm{f}_2^2 - 0 \quad\text{by assumption}
+\norm{f(f-p_\eps)}_1 
+&= \norm{f^2}_1 - \norm{f\cdot p_\eps}_1 \\
+&= \norm{f^2}_1 - 0 \quad\text{by assumption} \\
+&= \norm{f}_2^2
 .\end{align*}
 
+  - Where we've used that $\norm{f^2}_1 = \int \abs{f^2} = \int \abs{f}^2 = \norm{f}_2^2$.
+
 - On the other hand
+\begin{align*}
+\norm{f(f-p_\eps)} \leq \norm{f}_1 \norm{f-p_\eps}_\infty \quad\text{by Holder} \\
+\leq \norm{f}_1 
+.\end{align*}
 
 ## 5
 
