/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -281,9 +281,19 @@ Concepts used
 
 - On the other hand
 \begin{align*}
-\norm{f(f-p_\eps)} \leq \norm{f}_1 \norm{f-p_\eps}_\infty \quad\text{by Holder} \\
-\leq \norm{f}_1 
+\norm{f(f-p_\eps)} 
+&\leq \norm{f}_1 \norm{f-p_\eps}_\infty \quad\text{by Holder} \\
+&\leq \eps \norm{f}_1  \\
+&\leq \eps \norm{f}_2 \sqrt{m(X)} \\ 
+&= \eps \norm{f}_2 \quad\text{since } m(X)= 1
 .\end{align*}
+  - Where we've used that $\norm{fg}_1 = \int \abs{fg} = \int \abs{f}\abs{g} \leq \int \norm{f}_\infty \abs{g} = \norm{f}_\infty \norm{g}_1$.
+
+- Combining these,
+\begin{align*}
+\norm{f}_2^2 \leq \norm{f}_2 \eps \implies \norm{f}_2 < \eps \to 0,
+.\end{align*}
+  so $\norm{f}_2 = 0$, which implies $f=0$ almost everywhere.
 
 ## 5
 
