/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -246,7 +246,7 @@ $$
 \inner{f}{e_k} 
 &= \int_0^1 f(x) e^{-2\pi i k x} ~dx \\
 &= \int_0^1 f(x) \lim_{\ell \to \infty} P_\ell(x) \\
-&= \lim_{\ell \to \infty}  \int_0^1 f(x) P_\ell(x) \quad\quad \text{by uniform convergence on a bounded interval} \\
+&= \lim_{\ell \to \infty}  \int_0^1 f(x) P_\ell(x) \quad\quad \text{by uniform convergence on a compact interval} \\
 &= \lim_{\ell \to \infty} 0 \quad\text{by assumption}\\
 &= 0 \quad \forall k\in \ZZ
 ,\end{align*}
