/ ‘Complex Analysis/Review Doc/sections/2020-07-22.md’ + ‘Complex Analysis/Review Doc/sections/figures/image_2020-07-22-13-22-46.png’

--- a/Complex Analysis/Review Doc/sections/2020-07-22.md
+++ b/Complex Analysis/Review Doc/sections/2020-07-22.md
@@ -8,5 +8,23 @@ g(z) = \lambda {1-a \over 1 - \bar a z}, \quad \abs{a} < 1, \quad \abs{\lambda} 
 ## Plane to Disc
 
 \begin{align*}
-f(z) = {z - i \over z + i} \qquad f\inv(z) = i\qty{1 + w \over 1 - w}
+\phi: \HH &\to \DD \\
+\phi(z) &= {z - i \over z + i} \qquad f\inv(z) = i\qty{1 + w \over 1 - w}
 .\end{align*}
+
+## Sector to Disc
+
+For $S_\alpha \definedas \thset{z\in\CC \suchthat 0 < \arg(z) < \alpha }$ an open sector for $\alpha$ some angle, first map the sector to the half-plane:
+\begin{align*}
+g: S_\alpha &\to \HH \\
+g(z) &= z^{\pi \over \alpha}
+.\end{align*}
+
+Then compose with a map $\HH\to\DD$:
+\begin{align*}
+f: S_\alpha &\to \DD \\
+f(z) &= (\phi \circ g)(z) = {z^{\pi\over \alpha} - i \over z^{\pi\over\alpha} + i}
+.\end{align*}
+
+![](figures/image_2020-07-22-13-22-46.png)
+
