/ ‘Complex Analysis/Review Doc/sections/2020-07-22.md’

--- a/Complex Analysis/Review Doc/sections/2020-07-22.md
+++ b/Complex Analysis/Review Doc/sections/2020-07-22.md
@@ -28,3 +28,9 @@ f(z) &= (\phi \circ g)(z) = {z^{\pi\over \alpha} - i \over z^{\pi\over\alpha} + 
 
 ![](figures/image_2020-07-22-13-22-46.png)
 
+## Strip to Disc
+
+- Map to horizontal strip by rotation $z\mapsto \lambda z$.
+- Map horizontal strip to sector by $z \mapsto e^z$
+- Map sector to $\HH$ by $z\mapsto z^{\pi\over\alpha}$.
+- Map $\HH\to\DD$.
