/ ‘Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.md’ / ‘Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.pdf’ / ‘Complex Analysis/Review Doc/sections/2020-07-22.md’ / ‘Complex Analysis/UGA Questions/Complex_Analysis_Problems.pdf’ / ‘Complex Analysis/UGA Solutions/Complex_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.md’ / ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/4_Fourier.md’ / ‘Real Analysis/Review Doc/sections/91_2_Fall_2018_Exam_2.md’ / ‘Real Analysis/UGA Questions/UGA_Real_Analysis_Qual_Questions.pdf’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’

--- a/Complex Analysis/Review Doc/sections/2020-07-22.md
+++ b/Complex Analysis/Review Doc/sections/2020-07-22.md
@@ -14,7 +14,7 @@ g(z) = \lambda {1-a \over 1 - \bar a z}, \quad \abs{a} < 1, \quad \abs{\lambda} 
 
 ## Sector to Disc
 
-For $S_\alpha \definedas \thset{z\in\CC \suchthat 0 < \arg(z) < \alpha }$ an open sector for $\alpha$ some angle, first map the sector to the half-plane:
+For $S_\alpha \definedas \theset{z\in\CC \suchthat 0 < \arg(z) < \alpha }$ an open sector for $\alpha$ some angle, first map the sector to the half-plane:
 \begin{align*}
 g: S_\alpha &\to \HH \\
 g(z) &= z^{\pi \over \alpha}
