--- a/Real Analysis/Review Doc/sections/91_2_Fall_2018_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/91_2_Fall_2018_Exam_2.md
@@ -18,7 +18,7 @@ Let $g\in L^\infty([0, 1])$.
 
 a. Prove
 \begin{align*}
-\norm{g}_{L^p([0, 1])} \converges{p\to\infty} \norm{g}_{L^\infty([0, 1])}
+\norm{g}_{L^p([0, 1])}  \converges{p\to\infty}\to \norm{g}_{L^\infty([0, 1])}
 .\end{align*}
 
 b. Prove that the map
